--- a/app/src/main/res/layout/activity_newtask.xml
+++ b/app/src/main/res/layout/activity_newtask.xml
@@ -1,9 +1,351 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".newtask">
+    tools:context="newtask"
+    android:orientation="horizontal">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="20dp">
+
+        <TextView
+            android:id="@+id/my_heading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="40dp"
+            android:gravity="center_horizontal|bottom"
+            android:text="Timesheets"
+            android:textColor="@color/black"
+            android:textSize="40sp" />
+
+        <TextView
+            android:id="@+id/subheading"
+            android:layout_width="300dp"
+
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:background="@drawable/button"
+            android:gravity="center_horizontal|bottom"
+            android:text="New Task"
+            android:textColor="@color/black"
+            android:textSize="40sp"></TextView>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="500dp">
+
+            <LinearLayout
+                android:layout_width="370dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/button"
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:id="@+id/NewTask"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginBottom="0dp"
+                    android:gravity="center"
+                    android:text="Task Name"
+                    android:textColor="@color/black"
+                    android:textSize="40sp"
+
+                    tools:ignore="RtlCompat">
+
+                </TextView>
+
+                <EditText
+                    android:layout_width="320dp"
+                    android:layout_height="2dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:background="@android:color/black" />
+
+                <TextView
+                    android:id="@+id/category"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="Category"
+                    android:textColor="@color/black"
+                    android:textSize="40sp"></TextView>
+
+                <Spinner
+                    android:id="@+id/design"
+                    android:layout_width="300dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="1dp"
+                    android:background="@drawable/spinnnerbtn"
+                    android:drawablePadding="8dp"
+                    android:spinnerMode="dropdown" />
+
+                <TextView
+                    android:id="@+id/frame"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="Time Frame"
+                    android:textColor="@color/black"
+                    android:textSize="40sp">
+
+                </TextView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/start_date"
+                        android:layout_width="101dp"
+                        android:layout_height="48dp"
+                        android:layout_marginStart="30dp"
+                        android:layout_marginTop="15dp"
+                        android:backgroundTint="#a6a6a6"
+                        android:onClick="datePickerDialog"
+                        android:text="Start Date"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:textSize="10sp"
+                        app:cornerRadius="10dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/colo3"
+                        tools:ignore="SmallSp" />
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="80dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/baseline_arrow_right_alt_24">
+
+                    </ImageView>
+
+
+                    <Button
+                        android:id="@+id/end_date"
+                        android:layout_width="101dp"
+                        android:layout_height="48dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginEnd="7dp"
+                        android:backgroundTint="#a6a6a6"
+                        android:text="End Date"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:textSize="10sp"
+                        app:cornerRadius="10dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/colo3"
+                        tools:ignore="SmallSp" />
+
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/goals"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="Daily Goal"
+                    android:textColor="@color/black"
+                    android:textSize="40sp">
+
+                </TextView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="MIN"
+                            android:textColor="#000000"
+                            android:textSize="20sp" />
+
+                        <Button
+                            android:id="@+id/sd"
+                            android:layout_width="101dp"
+                            android:layout_height="48dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="15dp"
+                            android:backgroundTint="#a6a6a6"
+                            android:onClick="datePickerDialog"
+                            android:text="Hours"
+                            android:textAlignment="center"
+                            android:textColor="#000000"
+                            android:textSize="10sp"
+                            app:cornerRadius="10dp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/colo3"
+                            tools:ignore="SmallSp" />
+                    </LinearLayout>
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="80dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/baseline_arrow_right_alt_24" />
+
+                    <LinearLayout
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="130dp"
+                            android:layout_height="wrap_content"
+                            android:text="MAX"
+                            android:textColor="#000000"
+                            android:textSize="20sp" />
+
+                        <Button
+                            android:id="@+id/ed"
+                            android:layout_width="101dp"
+                            android:layout_height="48dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginEnd="15dp"
+                            android:backgroundTint="#a6a6a6"
+
+                            android:text="Hours"
+                            android:textAlignment="center"
+                            android:textColor="#000000"
+                            android:textSize="10sp"
+                            app:cornerRadius="10dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/colo3"
+                            tools:ignore="SmallSp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/Desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="Description"
+                    android:textColor="@color/black"
+                    android:textSize="40sp">
+
+                </TextView>
+
+                <EditText
+
+                    android:id="@+id/myEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="top|start"
+                    android:inputType="textMultiLine"
+                    android:lines="5" />
+
+                <TextView
+                    android:id="@+id/image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="Upload image"
+                    android:textColor="@color/black"
+                    android:textSize="40sp">
+
+                </TextView>
+                <ImageView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="100dp"
+                    android:layout_height="80dp"
+                    android:background="#1f1f1e"
+                    android:layout_gravity="center"
+                    android:src="@drawable/upload">
+                </ImageView>
+
+                <Button
+                    android:layout_width="120dp"
+                    android:layout_height="70dp"
+                     android:background="#a6a6a6"
+                    android:textAllCaps="false"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:text="Submit"
+                    android:textColor="@color/black">
+
+                </Button>
+
+
+
+            </LinearLayout>
+
+
+        </ScrollView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="20dp">
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/st"
+            android:layout_margin="20dp"/>
+
+        <ImageView
+            android:id="@+id/timesheet"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/cl"
+            android:layout_margin="20dp"/>
+
+        <ImageView
+            android:id="@+id/profilep"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_margin="20dp"
+            android:src="@drawable/profile"
+            />
+
+    </LinearLayout>
+</LinearLayout>
+
